--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,13 @@ body::-webkit-scrollbar-thumb {
   background: var(--scroll-thumb);
 }
 
-.home-link, .home-link a{
+a {
   text-decoration: none;
+}
+
+.home-link {
+  font-weight: bold;
+  font-size: 20px;
   color: var(--scroll-thumb) !important;
 }
 
@@ -44,7 +49,7 @@ footer {
   transform: scale(1.1);
 }
 
-.home-link:hover a{
+.home-link:hover{
   color: var(--icon-hover)!important;
 }
 
@@ -53,7 +58,7 @@ footer {
   padding: 5px;
 }
 
-.people tr:hover{
+.people tr:hover, v-span, .home-link{
   cursor: pointer;
 }
 
@@ -62,7 +67,7 @@ footer {
   font-weight: bold;
 }
 
-.navbar-x {
+.navbar-x, .line {
   position: fixed;
   background-color: var(--bg-primary);
   transition: width 300ms ease;
@@ -168,14 +173,14 @@ footer {
   position: fixed;
   width: 50px;
   height: 50px;
-  right: 1rem;
+  right: .5rem;
   font-weight: 1000;
   display: none;
   text-decoration: none;
   text-align: center;
   line-height: 50px;
   color: var(--scroll-track);
-  font-size: 2rem;
+  font-size: 3.5rem;
   border: none;
   border-radius: 25%;
   cursor: pointer;
@@ -188,26 +193,34 @@ footer {
 footer {
   background-color: var(--bg-primary) !important;
   color: var(--text-primary) !important;
-  padding: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .v-footer {
   padding: 5px;
   position: absolute;
   bottom: 0;
-  width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
-  .navbar-x {
+  .navbar-x, .line {
     bottom: 0;
+    right: 0;
+    left: 0;
     width: 100vw;
     height: 5rem;
   }
 
+  .contact-section {
+    margin: .1rem;
+  }
+
   .v-footer {
     bottom: 5rem;
-    margin: 0;
+    padding-left: .7rem;
   }
 
   .logo {
@@ -228,19 +241,27 @@ footer {
   }
 
   #go-top-btn {
-    bottom: 5.5rem;
+    bottom: 7rem;
+  }
+
+  .home-link:hover {
+    transform: scale(1)!important;
   }
 }
 
 @media only screen and (min-width: 600px) {
   .v-footer {
-    margin-left: 5rem;
+    padding-left: 5.5rem;
   }
 
-  .navbar-x {
+  .navbar-x, .line {
     top: 0;
     width: 5rem;
     height: 100vh;
+  }
+
+  .contact-section {
+    margin-left: 5rem;
   }
 
   .navbar-x:hover {
@@ -262,6 +283,6 @@ footer {
   }
 
   #go-top-btn {
-    bottom: 1rem;
+    bottom: 3rem;
   }
 }
