--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,6 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
@@ -11,8 +10,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Flex Grade</title>
   <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
-  <!-- <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css"> -->
-  <link rel="stylesheet" href="{% static 'style.css' %}">
+  <link rel="stylesheet" href="{% static 'style.css' %}" type="text/css">
 </head>
 
 <div class="line"></div>
