--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
 
 <head>
@@ -9,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Flex Grade</title>
-  <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
-  <link rel="stylesheet" href="{% static 'style.css' %}" type="text/css">
+  <link rel="icon" href="static/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="static/style.css" type="text/css">
 </head>
 
 <div class="line"></div>
@@ -19,6 +18,16 @@
   <main id="app">
   <navbar-x ></navbar-x>
   <v-app>
+    {% verbatim %}
+    <v-alert
+      class="notification"
+      v-if="showAlert"
+      :value="true"
+      :type="alertType"
+    >
+      {{ alertMessage }}
+    </v-alert>
+    {% endverbatim %}
     <toolbar-x ></toolbar-x>
     <section class="main">
       <router-view></router-view>
@@ -71,6 +80,39 @@
   </div>
 </template>
 
+<template id="grade-add-newuser">
+  <v-row justify="center">
+    <v-dialog v-model="dialog" persistent max-width="600px">
+      <template v-slot:activator="{ on }">
+        <v-btn color="primary" dark v-on="on">Open Dialog</v-btn>
+      </template>
+      <v-card>
+        <v-card-title>
+          <span class="headline">User Profile</span>
+        </v-card-title>
+        <v-card-text>
+          <v-container>
+            <v-row>
+              <v-col cols="12">
+                <v-text-field label="Legal first name*" v-model="$root.username" required></v-text-field>
+              </v-col>
+              <v-col cols="12">
+                <v-text-field label="Password*" :rules="[$root.rules.min(10, $root.password), $root.rules.max(12, $root.password)]" v-model="$root.password" required></v-text-field>
+              </v-col>
+            </v-row>
+          </v-container>
+        </v-card-text>
+        <v-card-actions>
+          <v-spacer></v-spacer>
+          <v-btn color="blue darken-1" text @click="$root.newUser">Save</v-btn>
+          <v-btn color="blue darken-1" text @click="$root.getPass">Get</v-btn>
+          <v-btn color="blue darken-1" text @click="dialog = false">Exit</v-btn>
+        </v-card-actions>
+      </v-card>
+    </v-dialog>
+  </v-row>
+</template>
+
 <template id="grade-home">
   <div class="container text-center mb-5">
     <h2 class="display-2 my-5 text-weight-bold text-uppercase">Flex Grade</h2>
@@ -90,7 +132,6 @@
 </template>
 
 <template id="grade-new-semester">
-
 </template>
 
 <template id="grade-contact">
@@ -324,8 +365,23 @@
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
   <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.1.3/vuex.min.js"></script>
-  <script src="{% static 'main.js' %}" type="text/javascript"></script>
+  <script src="static/main.js" type="text/javascript"></script>
   <script type="text/javascript">
+  function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        var cookies = document.cookie.split(';');
+        for (var i = 0; i < cookies.length; i++) {
+            var cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+};
     function goToTop() {
       window.scrollTo({
         top: 0,
