--- a/static/style.css
+++ b/static/style.css
@@ -34,10 +34,7 @@ a {
   text-decoration: none;
 }
 
-.notification {
-  position: fixed;
-  right: 1rem;
-  top: 1rem;
+v-dialog {
   z-index: 1000;
 }
 
@@ -52,10 +49,6 @@ footer {
   bottom: 0;
 }
 
-.home-link:hover {
-  transform: scale(1.1);
-}
-
 .home-link:hover{
   color: var(--icon-hover)!important;
 }
@@ -63,6 +56,19 @@ footer {
 .main {
   margin-left: 5rem;
   padding: 5px;
+}
+
+table {
+  box-sizing: border-box;
+}
+
+tr:hover {
+  padding: 3px;
+  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
+}
+
+.v-simple-checkbox:hover {
+  transform: scale(1.2);
 }
 
 .people tr:hover, v-span, .home-link{
@@ -78,7 +84,7 @@ footer {
   position: fixed;
   background-color: var(--bg-primary);
   transition: width 300ms ease;
-  z-index: 1000;
+  z-index: 200;
 }
 
 .navbar-nav-x {
