--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -8,8 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Flex Grade</title>
-  <link rel="icon" href="static/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="static/style.css" type="text/css">
+  <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+  <link rel="stylesheet" href="{% static 'style.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'notiflix-2.1.2.min.css' %}" type="text/css">
 </head>
 
 <div class="line"></div>
@@ -18,17 +20,7 @@
   <main id="app">
   <navbar-x ></navbar-x>
   <v-app>
-    {% verbatim %}
-    <v-alert
-      class="notification"
-      v-if="showAlert"
-      :value="true"
-      :type="alertType"
-    >
-      {{ alertMessage }}
-    </v-alert>
-    {% endverbatim %}
-    <toolbar-x ></toolbar-x>
+    <toolbar-x ref="toolbar"></toolbar-x>
     <section class="main">
       <router-view></router-view>
     </section>
@@ -36,387 +28,14 @@
   </v-app>
 </main>
 
-<template id="grade-login">
-  <div class="text-center mx-10">
-    <h3 class="text--secondary">Авторизація</h3>
-    {% verbatim %}
-    <span class="red--text darken-4">{{ errorMessage }}</span>
-    {% endverbatim %}
-    <v-text-field
-    hide-details="auto"
-    color="teal darken-4"
-    maxlength="30"
-    hint="Ім'я користувача"
-    placeholder="Ім'я користувача"
-    single-line
-    prepend-inner-icon="mdi-lock-outline"
-    name="username"
-    v-model="username"
-    @keypress.enter="login"
-    class="my-5"
-    ></v-text-field>
-    <v-text-field
-    hide-details="auto"
-    :append-icon="show ? 'mdi-eye' : 'mdi-eye-off'"
-    :type="show ? 'text' : 'password'"
-    color="teal darken-4"
-    counter="30"
-    maxlength="30"
-    hint="Введіть ваш пароль"
-    placeholder="Введіть ваш пароль"
-    :loading="loading"
-    single-line
-    prepend-inner-icon="mdi-lock-outline"
-    name="password"
-    v-model="password"
-    class="my-5"
-    @keypress.enter="login"
-    @click:append="show = !show"
-    >
-    </v-text-field>
-    <v-btn @click="login" class="home-link my-5" width="150" height="55">
-      <v-icon icon title="Login" class="m-auto display-2">mdi-check</v-icon>
-    </v-btn>
-  </div>
-</template>
-
-<template id="grade-add-newuser">
-  <v-row justify="center">
-    <v-dialog v-model="dialog" persistent max-width="600px">
-      <template v-slot:activator="{ on }">
-        <v-btn color="primary" dark v-on="on">Open Dialog</v-btn>
-      </template>
-      <v-card>
-        <v-card-title>
-          <span class="headline">User Profile</span>
-        </v-card-title>
-        <v-card-text>
-          <v-container>
-            <v-row>
-              <v-col cols="12">
-                <v-text-field label="Legal first name*" v-model="$root.username" required></v-text-field>
-              </v-col>
-              <v-col cols="12">
-                <v-text-field label="Password*" :rules="[$root.rules.min(10, $root.password), $root.rules.max(12, $root.password)]" v-model="$root.password" required></v-text-field>
-              </v-col>
-            </v-row>
-          </v-container>
-        </v-card-text>
-        <v-card-actions>
-          <v-spacer></v-spacer>
-          <v-btn color="blue darken-1" text @click="$root.newUser">Save</v-btn>
-          <v-btn color="blue darken-1" text @click="$root.getPass">Get</v-btn>
-          <v-btn color="blue darken-1" text @click="dialog = false">Exit</v-btn>
-        </v-card-actions>
-      </v-card>
-    </v-dialog>
-  </v-row>
-</template>
-
-<template id="grade-home">
-  <div class="container text-center mb-5">
-    <h2 class="display-2 my-5 text-weight-bold text-uppercase">Flex Grade</h2>
-    <router-link to="/teachers" class="mx-5">
-      <v-btn class="home-link my-3" width="300" height="55">
-        <v-icon class="m-auto mr-3">mdi-account-multiple-outline</v-icon>
-        <span class="text--secondary m-auto">Викладачі</span>
-      </v-btn>
-    </router-link>
-    <router-link to="/students" class="mx-5">
-      <v-btn class="home-link my-3" width="300" height="55">
-        <v-icon icon class="m-auto mr-3">mdi-account-multiple-outline</v-icon>
-        <span class="text--secondary m-auto">Студенти</span>
-      </v-btn>
-    </router-link>
-  </div>
-</template>
-
-<template id="grade-new-semester">
-</template>
-
-<template id="grade-contact">
-  <div class="container text-center mb-5 align-center">
-    <h2 class="display-2 my-5 text-weight-bold text-uppercase">Flex Grade</h2>
-    <div class="text-justify contact-section">
-      <span class="mdi mdi-earth"></span>
-      <span class="text--secondary font-weight-black">Призначення:</span>
-      <span> облік результатів здачі студентом залікової сесії.</span> <br>
-      <span class="mdi mdi-account-outline"></span>
-      <span class="text--secondary font-weight-black">Розробник:</span>
-      <a class="home-link" @click="moreInfo"> Козачок Віктор</a> <br>
-      <span class="mdi mdi-phone"></span>
-      <span class="text--secondary font-weight-black">Телефон:</span>
-      <span> 096-123-7959</span> <br>
-      <span class="mdi mdi-gmail"></span>
-      <span class="text--secondary font-weight-black">Email:</span>
-      <span> viktorkozachok21@gmail.com</span>
-    </div>
-    <h3>Адміністратори системи</h3>
-    <div class="text-justify contact-section" v-for="admin in this.$root.admins">
-      <span class="mdi mdi-account-outline"></span>
-      <span> {{ admin.name }}</span>
-      <span class="text--secondary font-weight-black ml-3">Телефон:</span>
-      <span> {{ admin.phone }}</span>
-      <span class="text--secondary font-weight-black ml-3">Email:</span>
-      <span> {{ admin.email }}</span> <br>
-    </div>
-  </div>
-</template>
-
-<template id="grade-students">
-  <div>
-    <v-row>
-      <v-text-field
-      class="col-xs-12 col-md-9 px-5"
-      v-model="search"
-      append-icon="mdi-magnify"
-      label="Пошук"
-      single-line
-      hide-details
-      ></v-text-field>
-      <v-layout class="col-xs-3 d-flex align-center justify-center">
-        <v-switch
-        id="switch"
-        v-model="options.studyStatus"
-        flat
-        dense
-        color="teal darken-4"
-        ></v-switch>
-        <v-label v-if="options.studyStatus">Чи навчаються: Так</v-label>
-        <v-label v-else>Чи навчаються: Ні</v-label>
-      </v-layout>
-    </v-row>
-    <v-data-table
-    :headers="headers"
-    :items="students"
-    :item-key="itemKey"
-    :sort-by="sortBy"
-    multi-sort
-    :search="search"
-    no-results-text="Не знайдено відповідних записів"
-    v-model="selected"
-    :single-select="singleSelect"
-    show-select
-    :options.sync="options"
-    :items-per-page="itemsPerPage"
-    @page-count="pageCount = $event"
-    @click:row="moreInfo"
-    class="elevation-1 people"
-    hide-default-footer
-    :loading="loading"
-    loading-text="Завантаження... Будь ласка, зачекайте"
-    ></v-data-table>
-    <v-pagination
-    class="font-weight-black"
-    v-model="options.page"
-    :total-visible="7"
-    :length="pageCount"
-    @click.native="$root.scrollToTop"
-    dark color="teal darken-4"
-    ></v-pagination>
-    <v-text-field
-    v-model="totalItems"
-    @click:prepend-inner="changeIcon"
-    :prepend-inner-icon="icon"
-    solo
-    readonly
-    ></v-text-field>
-  </div>
-</template>
-
-<template id="grade-students-person">
-  <div class="mx-1 text-center">
-    <div class="description mb-3">
-      <div class="text-center float-sm-left mr-sm-3">
-        <v-img
-        :src="person.avatar"
-        :aspect-ratio="3/4"
-        class="mx-auto mb-1"
-        width="250"
-        ></v-img>
-        <!-- <span class="font-weight-bold mb-1">Дата реєстрації:</span> {{ person.registered }} -->
-      </div>
-      <!-- <h1 class="text--secondary">Електронна залікова книжка №: {{ person.bookNumber }}</h1> -->
-      <h3 class="mb-1">{{ person.fullname }}</h3>
-      <v-divider class="my-3"></v-divider>
-      <!-- <div class="text-justify ml-3">
-        <span class="font-weight-bold">Напрям/спеціальність:</span> {{ person.specialty }} <br>
-        <v-divider class="my-2"></v-divider>
-        <span class="font-weight-bold">Відділення:</span> {{ person.department }} <br>
-        <v-divider class="my-2"></v-divider>
-        <span class="font-weight-bold">Рівень вищої освіти/освітньо-кваліфікаційний рівень:</span> {{ person.degree }} <br>
-        <v-divider class="my-2"></v-divider>
-        {{ person.enrolledIn }}, наказ від: {{person.enrolledOrderDate}}р. №: {{ person.enrolledOrder }} <br>
-      </div> -->
-      <v-divider class="my-3"></v-divider>
-      <!-- <div class="text-justify">
-        <span class="font-weight-bold ml-3">Група:</span> {{ person.group }}
-        <span class="font-weight-bold ml-3">Форма навчання:</span> {{ person.trainingForm }}
-        <div class="ml-3" v-if="store.state.status === 'admin' || store.state.status === 'teacher'">
-          <span class="font-weight-bold">Телефон:</span> {{ person.phone }}
-        </div>
-      </div> -->
-    </div>
-    <v-divider class="my-3"></v-divider>
-    <h2 class="text--secondary">Заліки, екзамени, курсові роботи, практики</h2>
-    <v-divider class="my-3"></v-divider>
-    <p v-if="!gotData">Не знайдено відповідних записів</p>
-    <!-- <div v-for="examination in examinatins" class="text-justify">
-      <h4 class="title ml-5 my-3">{{ examination.semester }} 2019/2020 навчального року</h4>
-      <v-divider class="my-3"></v-divider>
-      <v-data-table
-      :headers="headers"
-      :items="examination.subjects"
-      :item-key="itemKey"
-      @click:row="teacherInfo"
-      hide-default-footer
-      class="elevation-1 people"
-      ></v-data-table>
-      <v-divider class="my-5"></v-divider>
-    </div> -->
-  </div>
-</template>
-
-<template id="grade-teachers">
-  <div>
-    <v-row>
-      <v-text-field
-      class="col-xs-12 px-5"
-      v-model="search"
-      append-icon="mdi-magnify"
-      label="Пошук"
-      single-line
-      hide-details
-      ></v-text-field>
-    </v-row>
-    <v-data-table
-    :headers="headers"
-    :items="teachers"
-    :item-key="itemKey"
-    :sort-by="sortBy"
-    multi-sort
-    :search="search"
-    v-model="selected"
-    :single-select="singleSelect"
-    show-select
-    no-results-text="Не знайдено відповідних записів"
-    :page="page"
-    :items-per-page="itemsPerPage"
-    @page-count="pageCount = $event"
-    @click:row="moreInfo"
-    class="elevation-1 people"
-    hide-default-footer
-    :loading="loading"
-    loading-text="Завантаження... Будь ласка, зачекайте"
-    ></v-data-table>
-    <v-pagination
-    class="font-weight-black"
-    v-model="page"
-    :total-visible="7"
-    :length="pageCount"
-    @click.native="scrollToTop"
-    dark color="teal darken-4"
-    ></v-pagination>
-    <v-text-field
-    v-model="totalItems"
-    @click:prepend-inner="changeIcon"
-    :prepend-inner-icon="icon"
-    solo readonly
-    ></v-text-field>
-  </div>
-</template>
-
-<template id="grade-teachers-person">
-  <div class="mx-1 text-justify">
-    <div class="description text-center mb-3">
-      <div class="text-center float-sm-left mr-sm-3">
-        <v-img
-        :src="person.picture"
-        :aspect-ratio="3/4"
-        class="mx-auto mb-1"
-        width="250"
-        ></v-img>
-        <span class="font-weight-bold mb-1">Дата реєстрації:</span> {{ person.registered }}
-      </div>
-      <h3 class="mb-1">{{ person.name }}</h3>
-      <v-divider class="my-3"></v-divider>
-    </div>
-    <span class="font-weight-bold">Email:</span> {{ person.email }}
-    <span class="font-weight-bold ml-sm-5">Телефон:</span> {{ person.phone }}
-    <v-divider class="my-3"></v-divider>
-    <p v-if="!gotData">Не знайдено відповідних записів</p>
-    <v-data-table
-    :headers="headers"
-    :items="subjects"
-    :item-key="itemKey"
-    hide-default-footer
-    class="elevation-1"
-    >
-      <template #items="props">
-        <td class="text-md-left">{{ props.item.name }}</td>
-      </template>
-    </v-data-table>
-    <v-divider class="my-3"></v-divider>
-  </div>
-</template>
-
   <span class="mdi mdi-chevron-up" onclick="goToTop()" id="go-top-btn"></span>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
-  <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.2.20/dist/vuetify.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.1.3/vue-router.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.1.3/vuex.min.js"></script>
-  <script src="static/main.js" type="text/javascript"></script>
-  <script type="text/javascript">
-  function getCookie(name) {
-    var cookieValue = null;
-    if (document.cookie && document.cookie !== '') {
-        var cookies = document.cookie.split(';');
-        for (var i = 0; i < cookies.length; i++) {
-            var cookie = cookies[i].trim();
-            // Does this cookie string begin with the name we want?
-            if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                break;
-            }
-        }
-    }
-    return cookieValue;
-};
-    function goToTop() {
-      window.scrollTo({
-        top: 0,
-        behavior: "smooth"
-      });
-    };
-    const goTop = document.getElementById("go-top-btn");
-    window.onscroll = () => {
-      if (document.body.scrollTop > 700 || document.documentElement.scrollTop > 700) {
-
-        goTop.style.display = "block";
-      } else {
-        goTop.style.display = "none";
-      }
-    };
-    const toggle = document.getElementById("full-toggle");
-    document.addEventListener('fullscreenchange', (event) => {
-      if (!document.fullscreenElement) {
-        toggle.innerHTML = '<span class="mdi mdi-fullscreen"></span>';
-      } else {
-        if (document.exitFullscreen) {
-          toggle.innerHTML = '<span class="mdi mdi-fullscreen-exit"></span>';
-        }
-      }
-    });
-    toggle.addEventListener('click', (event) => {
-      if (!document.fullscreenElement) {
-        document.documentElement.requestFullscreen();
-      } else {
-        if (document.exitFullscreen) {
-          document.exitFullscreen();
-        }
-      }
-    });
-  </script>
+  <script src="{% static 'notiflix-2.1.2.min.js' %}"></script>
+  <script src="{% static 'main.js' %}" type="text/javascript"></script>
+  <script src="{% static 'logic.js' %}" type="text/javascript"></script>
 </body>
 
 </html>
