--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en">
+<html lang="uk">
 
 <head>
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
@@ -14,23 +14,24 @@
   <link rel="stylesheet" href="{% static 'notiflix-2.1.2.min.css' %}" type="text/css">
 </head>
 
-
 <body>
   <main id="app">
+    {% verbatim %}
     <div class="line"></div>
-  <navbar-x></navbar-x>
-  <v-app>
-    <v-app-bar class="grey lighten-5" height="55px" dense app fixed>
-      <toolbar-x ref="toolbar"></toolbar-x>
-    </v-app-bar>
-    <v-content>
-    <section class="main">
-      <router-view></router-view>
-    </section>
-  </v-content>
-    <footer-x></footer-x>
-  </v-app>
-</main>
+    <navbar-x></navbar-x>
+    <v-app>
+      <v-app-bar class="grey lighten-5" height="55px" dense app fixed>
+        <toolbar-x ref="toolbar"></toolbar-x>
+      </v-app-bar>
+      <v-content>
+        <section class="main">
+          <router-view></router-view>
+        </section>
+      </v-content>
+      <footer-x></footer-x>
+    </v-app>
+    {% endverbatim %}
+  </main>
 
   <span class="mdi mdi-chevron-up" onclick="goToTop()" id="go-top-btn"></span>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js"></script>
