--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,107 @@
     {% endverbatim %}
   </main>
 
+{% verbatim %}
+  <template id="accordion">
+    <v-expansion-panels>
+      <v-expansion-panel>
+        <v-expansion-panel-header expand-icon="mdi-chart-timeline">
+          <template v-slot:default="{ open }">
+            <v-row no-gutters>
+              <v-col cols="4"><h5 class="title">Загальна інформація<h5/></v-col>
+            </v-row>
+          </template>
+        </v-expansion-panel-header>
+        <v-expansion-panel-content>
+          <v-row no-gutters v-if="store.state.status === 'Admin'">
+            <v-col cols="3" class="d-flex justify-center align-center">
+              <div :title="editSchool ? 'Вимкнути редагування' : 'Ввімкнути редагування'">
+                <v-switch
+                v-model="editSchool"
+                flat
+                dense
+                color="teal darken-4"
+                ></v-switch>
+              </div>
+              <v-btn text v-if="editSchool" class="home-link my-3" title="Зберегти зміни" @click="saveChanges"><span class="mdi mdi-36px mdi-content-save"></span></v-btn>
+            </v-col>
+          </v-row>
+          <v-row no-gutters>
+            <v-col cols="12" class="px-2 py-2">
+              <v-text-field
+              v-if="store.state.status === 'Admin'"
+              label="Повна назва"
+              maxlength="250"
+              :rules="[store.state.rules.spaces(school.fullName),store.state.rules.min(10, school.fullName)]"
+              v-model="school.fullName"
+              @input="wasEdited = true"
+              color="teal darken-4"
+              :readonly="!editSchool"
+              ></v-text-field>
+            </v-col>
+            <v-col cols="12" class="px-2 py-2">
+              <v-text-field
+              :label="store.state.status === 'Admin' ? 'Скорочена назва' : 'Назва закладу освіти'"
+              maxlength="100"
+              :rules="[store.state.rules.spaces(school.shortName),store.state.rules.min(3, school.shortName)]"
+              v-model="school.shortName"
+              @input="wasEdited = true"
+              color="teal darken-4"
+              :readonly="!editSchool"
+              ></v-text-field>
+            </v-col>
+            <v-col cols="12" sm="6" md="3" class="px-2 py-2">
+              <v-text-field
+              label="Директор"
+              maxlength="50"
+              :rules="[store.state.rules.spaces(school.director),store.state.rules.min(3, school.director)]"
+              v-model="school.director"
+              @input="wasEdited = true"
+              color="teal darken-4"
+              class="capitalize"
+              :readonly="!editSchool"
+              ></v-text-field>
+            </v-col>
+            <v-col cols="12" sm="6" md="3" class="px-2 py-2" v-if="store.state.status === 'Admin'">
+              <v-text-field
+              maxlength="30"
+              :rules="[store.state.rules.spaces(school.directorShort),store.state.rules.min(3, school.directorShort)]"
+              v-model="school.directorShort"
+              color="teal darken-4"
+              class="capitalize"
+              readonly
+              ></v-text-field>
+            </v-col>
+            <v-col cols="12" sm="6" md="3" class="px-2 py-2">
+              <v-text-field
+              label="Заступник директора з навчальної роботи"
+              maxlength="50"
+              :rules="[store.state.rules.spaces(school.assistant),store.state.rules.min(3, school.assistant)]"
+              v-model="school.assistant"
+              @input="wasEdited = true"
+              color="teal darken-4"
+              class="capitalize"
+              :readonly="!editSchool"
+              ></v-text-field>
+            </v-col>
+            <v-col cols="12" sm="6" md="3" class="px-2 py-2" v-if="store.state.status === 'Admin'">
+              <v-text-field
+              maxlength="30"
+              :rules="[store.state.rules.spaces(school.assistantShort),store.state.rules.min(3, school.assistantShort)]"
+              v-model="school.assistantShort"
+              color="teal darken-4"
+              class="capitalize"
+              readonly
+              ></v-text-field>
+            </v-col>
+          </v-row>
+        </v-expansion-panel-content>
+      </v-expansion-panel>
+
+    </v-expansion-panels>
+  </template>
+{% endverbatim %}
+
   <span class="mdi mdi-chevron-up" onclick="goToTop()" id="go-top-btn"></span>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.2.20/dist/vuetify.min.js"></script>
