--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 
 {% verbatim %}
   <template id="accordion">
-    <v-expansion-panels>
+    <v-expansion-panels focusable>
       <v-expansion-panel>
         <v-expansion-panel-header expand-icon="mdi-chart-timeline">
           <template v-slot:default="{ open }">
@@ -55,7 +55,7 @@
                 color="teal darken-4"
                 ></v-switch>
               </div>
-              <v-btn text v-if="editSchool" class="home-link my-3" title="Зберегти зміни" @click="saveChanges"><span class="mdi mdi-36px mdi-content-save"></span></v-btn>
+              <v-btn text v-if="editSchool" class="home-link my-3" title="Зберегти зміни" @click="saveSchool"><span class="mdi mdi-36px mdi-content-save"></span></v-btn>
             </v-col>
           </v-row>
           <v-row no-gutters>
@@ -127,6 +127,80 @@
               ></v-text-field>
             </v-col>
           </v-row>
+        </v-expansion-panel-content>
+      </v-expansion-panel>
+
+      <v-expansion-panel>
+        <v-expansion-panel-header expand-icon="mdi-chart-timeline" class="mb-3">
+          <template v-slot:default="{ open }">
+            <v-row no-gutters>
+              <v-col cols="4"><h5 class="title">Відділення<h5/></v-col>
+            </v-row>
+          </template>
+        </v-expansion-panel-header>
+        <v-expansion-panel-content>
+          <v-expansion-panels focusable>
+          <v-expansion-panel
+            v-for="item in departments"
+            :key="item.id"
+          >
+          <v-expansion-panel-header disable-icon-rotate expand-icon="mdi-folder-outline">
+            <template v-slot:default="{ open }">
+              <v-row no-gutters>
+                <v-col cols="10"><h5 class="title">{{ item.full_name }}<h5/></v-col>
+              </v-row>
+            </template>
+          </v-expansion-panel-header>
+            <v-expansion-panel-content>
+              <v-row no-gutters>
+                <v-col cols="12" class="px-2 py-2" v-if="store.state.status === 'Admin'">
+                  <v-text-field
+                  label="Назва відділення"
+                  maxlength="150"
+                  :rules="[store.state.rules.spaces(item.full_name),store.state.rules.min(10, item.full_name)]"
+                  v-model="item.full_name"
+                  @input="wasEdited = true"
+                  color="teal darken-4"
+                  :readonly="!editDepartment"
+                  ></v-text-field>
+                </v-col>
+                <v-col cols="6" class="px-2 py-2">
+                  <v-text-field
+                  label="Завідувач відділенням"
+                  maxlength="50"
+                  :rules="[store.state.rules.spaces(item.manager),store.state.rules.min(3, item.manager)]"
+                  v-model="item.manager"
+                  @input="wasEdited = true;shortManager(item.id)"
+                  color="teal darken-4"
+                  class="capitalize"
+                  :readonly="!editDepartment"
+                  ></v-text-field>
+                </v-col>
+                <v-col cols="3" class="px-2 py-2" v-if="store.state.status === 'Admin'">
+                  <v-text-field
+                  maxlength="30"
+                  :rules="[store.state.rules.spaces(item.manager_short),store.state.rules.min(3, item.manager_short)]"
+                  v-model="item.manager_short"
+                  color="teal darken-4"
+                  class="capitalize"
+                  readonly
+                  ></v-text-field>
+                </v-col>
+                <v-col cols="3" class="d-flex justify-center align-center" v-if="store.state.status === 'Admin'">
+                  <div :title="editDepartment ? 'Вимкнути редагування' : 'Ввімкнути редагування'">
+                    <v-switch
+                    v-model="editDepartment"
+                    flat
+                    dense
+                    color="teal darken-4"
+                    ></v-switch>
+                  </div>
+                  <v-btn text v-if="editDepartment" class="home-link my-3" title="Зберегти зміни" @click="saveDepartment(item.id)"><span class="mdi mdi-36px mdi-content-save"></span></v-btn>
+                </v-col>
+              </v-row>
+            </v-expansion-panel-content>
+          </v-expansion-panel>
+        </v-expansion-panels>
         </v-expansion-panel-content>
       </v-expansion-panel>
 
