--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
       </v-app-bar>
       <v-content>
         <section class="main">
-          <router-view></router-view>
+          <router-view :key="$route.path"></router-view>
         </section>
       </v-content>
       <footer-x></footer-x>
