--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <div class="line"></div>
     <navbar-x></navbar-x>
     <v-app>
-      <v-app-bar class="grey lighten-5" height="55px" dense app fixed>
+      <v-app-bar class="grey lighten-5 d-print-none" height="55px" dense app fixed>
         <toolbar-x ref="toolbar"></toolbar-x>
       </v-app-bar>
       <v-content>
@@ -164,7 +164,7 @@
                   :readonly="!editDepartment"
                   ></v-text-field>
                 </v-col>
-                <v-col cols="6" class="px-2 py-2">
+                <v-col cols="12" sm="6" md="6" class="px-2 py-2">
                   <v-text-field
                   label="Завідувач відділенням"
                   maxlength="50"
@@ -176,7 +176,7 @@
                   :readonly="!editDepartment"
                   ></v-text-field>
                 </v-col>
-                <v-col cols="3" class="px-2 py-2" v-if="store.state.status === 'Admin'">
+                <v-col cols="6" sm="3" md="3" class="px-2 py-2" v-if="store.state.status === 'Admin'">
                   <v-text-field
                   maxlength="30"
                   :rules="[store.state.rules.spaces(item.manager_short),store.state.rules.min(3, item.manager_short)]"
@@ -186,7 +186,7 @@
                   readonly
                   ></v-text-field>
                 </v-col>
-                <v-col cols="3" class="d-flex justify-center align-center" v-if="store.state.status === 'Admin'">
+                <v-col cols="6" sm="3" md="3" class="d-flex justify-center align-center" v-if="store.state.status === 'Admin'">
                   <div :title="editDepartment ? 'Вимкнути редагування' : 'Ввімкнути редагування'">
                     <v-switch
                     v-model="editDepartment"
@@ -251,7 +251,7 @@
                    dense required
                   ></v-select>
                 </v-col>
-                <v-col cols="3" class="px-2 py-2">
+                <v-col cols="3"class="px-2 py-2">
                   <v-text-field
                   label="Скорочена назва"
                   maxlength="5"
@@ -262,7 +262,7 @@
                   :readonly="!editSpecialty"
                   ></v-text-field>
                 </v-col>
-                <v-col cols="6" class="px-2 py-2">
+                <v-col cols="9" sm="6" md="6" class="px-2 py-2">
                   <v-select
                     v-if="store.state.status === 'Admin'"
                    :items="['Молодший бакалавр','Бакалавр','Молодший спеціаліст','Магістр','Спеціаліст']"
@@ -276,7 +276,7 @@
                    dense required
                   ></v-select>
                 </v-col>
-                <v-col cols="3" class="d-flex justify-center align-center" v-if="store.state.status === 'Admin'">
+                <v-col cols="6" sm="3" md="3" class="d-flex justify-center align-center" v-if="store.state.status === 'Admin'">
                   <div :title="editSpecialty ? 'Вимкнути редагування' : 'Ввімкнути редагування'">
                     <v-switch
                     v-model="editSpecialty"
@@ -313,6 +313,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.2.20/dist/vuetify.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.1.3/vue-router.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.1.3/vuex.min.js"></script>
+  <script src="https://unpkg.com/vue-html-to-paper/build/vue-html-to-paper.js"></script>
   <script src="{% static 'notiflix-2.1.2.min.js' %}"></script>
   <script src="{% static 'main.js' %}" type="text/javascript"></script>
   <script src="{% static 'logic.js' %}" type="text/javascript"></script>
