change the names of education levels

--- a/templates/index.html
+++ b/templates/index.html
@@ -266,7 +266,7 @@
                   <v-select
                     v-if="store.state.status === 'Admin'"
                    :items="['Молодший бакалавр','Бакалавр','Молодший спеціаліст','Магістр','Спеціаліст']"
-                   label="Рівень освіти"
+                   label="Ступінь освіти"
                    item-color="teal darken-4"
                    v-model="item.degree"
                    @change="wasEdited = true"
